--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-select-async-paginate": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
